1.0.2

- Fixed bug in SimpleSelectZero: under certain conditions, an error in
  counting zeroes was causing a out-of-bounds array access.

1.0.1

- Fixed wrong name of PaCo-trie-based monotone minimal
  perfect hash functions.

- Fixed small misbehaviours on very small key sets.

- New data structure (HollowTrieMonotoneMinimalPerfectHashFunction)
  that uses just 3.44 + 1.23 log log l bits per element.

1.0

- Fixed Jenkins hash so that it works with empty strings.

- Some class renamed.

- Rethought command-line argument parsing.

- Now monotone minimal perfect hashing classes.

- ShiftAddXorSignedStringMap moved to the DSI utilities.

- New classes for compressed lists based on the Elias-Fano
  representation.

0.3

- New rank/select structures.

- Restructuring following release of the DSI utilities: bit vectors
  implementations have been moved there.

- New signing classes that implement StringMap and make it possible to
  mimick the old MG4J SignedMinimalPerfectHash behaviour.

0.1

- First release.