@@ -69,8 +69,6 @@ public class RelativeTrieDistributor<T> extends AbstractObject2LongFunction<T> {
 	private final MWHCFunction<BitVector> behaviour;
 	/** The number of (internal and external) nodes of the trie. */
 	private final int size;
-	/** A debug function used to store explicitly {@link #behaviour}. */
-	private final Object2LongFunction<BitVector> externalTestFunction;
 	private MWHCFunction<BitVector> signatures;
 	private long w;
 	private LcpMonotoneMinimalPerfectHashFunction<BitVector> ranker;
@@ -84,8 +82,6 @@ public class RelativeTrieDistributor<T> extends AbstractObject2LongFunction<T> {
 	
 	/** An intermediate class containing the compacted trie generated by the delimiters. */
 	private final static class IntermediateTrie<T> {
-		/** A debug function used to store explicitly the internal behaviour. */
-		private Object2LongFunction<BitVector> externalTestFunction;
 		/** The root of the trie. */
 		protected final Node root;
 		/** The number of overall elements to distribute. */
@@ -173,7 +169,7 @@ public class RelativeTrieDistributor<T> extends AbstractObject2LongFunction<T> {
 					keys.add( LongArrayBitVector.copy( path.subVector( 0, p ) ) );
 					representations.add( path.copy() );
 					assert Fast.length( path.length() ) <= logW;
-					if ( DEBUG ) System.err.println( "Entering " + path + " with key " + path.subVector( 0, p ) + ", signature " + ( h & logLogWMask ) + " and length " + ( path.length() & logWMask ) );
+					if ( DEBUG ) System.err.println( "Entering " + path + " with key " + path.subVector( 0, p ) + ", signature " + ( h & logLogWMask ) + " and length " + ( path.length() & logWMask ) + "(value: " + (( h & logLogWMask ) << logW | ( path.length() & logWMask )) + ")" );
 
 					values.add( ( h & logLogWMask ) << logW | ( path.length() & logWMask ) );
 				}
@@ -195,10 +191,6 @@ public class RelativeTrieDistributor<T> extends AbstractObject2LongFunction<T> {
 		 */
 		
 		public IntermediateTrie( final Iterable<? extends T> elements, final int bucketSize, final TransformationStrategy<? super T> transformationStrategy, final File tempDir ) {
-			if ( ASSERTS ) {
-				externalTestFunction = new Object2LongOpenHashMap<BitVector>();
-				externalTestFunction.defaultReturnValue( -1 );
-			}
 			
 			Iterator<? extends T> iterator = elements.iterator(); 
 			delimiters = new ObjectOpenHashSet<BitVector>();
@@ -340,10 +332,8 @@ public class RelativeTrieDistributor<T> extends AbstractObject2LongFunction<T> {
 								externalParentRepresentations.add( depth == 0 ? pos : pos - 1 );
 								
 								if ( DEBUG ) {
-									externalTestFunction.put( path, behaviour );
 									System.err.println( "Computed " + ( node.isLeaf() ? "leaf " : "" ) + "mapping <" + node.index + ", " + path + "> -> " + behaviour );
 									System.err.println( "Root: " + root + " node: " + node + " representation length: " + ( depth == 0 ? pos : pos - 1 ) );
-									if ( DDEBUG ) System.err.println( externalTestFunction );
 								}
 
 								break;
@@ -422,13 +412,19 @@ public class RelativeTrieDistributor<T> extends AbstractObject2LongFunction<T> {
 	 * distinct, lexicographically increasing (in iteration order) bit vectors.
 	 * @param tempDir the directory where temporary files will be created, or <code>for the default directory</code>.
 	 */
-	public RelativeTrieDistributor( final Iterable<? extends T> elements, final int bucketSize, final TransformationStrategy<? super T> transformationStrategy, final File tempDir ) throws IOException {
+	public RelativeTrieDistributor( final Iterable<? extends T> elements, final int bucketSize, final TransformationStrategy<? super T> transformationStrategy, final File tempDir ) {
 		this.transformationStrategy = transformationStrategy;
 		final IntermediateTrie<T> intermediateTrie = new IntermediateTrie<T>( elements, bucketSize, transformationStrategy, tempDir );
 
 		size = intermediateTrie.size;
-		externalTestFunction = intermediateTrie.externalTestFunction;
-		
+
+		logWMask = intermediateTrie.logWMask;
+		logW =  intermediateTrie.logW;
+		logLogW =  intermediateTrie.logLogW;
+		logLogWMask =  intermediateTrie.logLogWMask;
+		w = intermediateTrie.w;
+		numDelimiters = intermediateTrie.delimiters.size();
+
 		int p = 0;
 		
 		if ( DDEBUG ) {
@@ -473,12 +469,6 @@ public class RelativeTrieDistributor<T> extends AbstractObject2LongFunction<T> {
 		if ( DDEBUG ) System.err.println( "Rank bit vector: " + leavesBitVector );
 		
 		ranker = new LcpMonotoneMinimalPerfectHashFunction<BitVector>( rankerStrings, TransformationStrategies.prefixFree() );
-		logWMask = intermediateTrie.logWMask;
-		logW =  intermediateTrie.logW;
-		logLogW =  intermediateTrie.logLogW;
-		logLogWMask =  intermediateTrie.logLogWMask;
-		w = intermediateTrie.w;
-		numDelimiters = intermediateTrie.delimiters.size();
 		
 		// Compute errors to be corrected
 		this.mistakeSignatures = new IntOpenHashSet();
@@ -538,11 +528,11 @@ public class RelativeTrieDistributor<T> extends AbstractObject2LongFunction<T> {
 			}
 		}
 
-		LOGGER.debug( "Behaviour bits per elements: " + (double)behaviour.numBits() / size );
-		LOGGER.debug( "Signature bits per elements: " + (double)signatures.numBits() / size );
-		LOGGER.debug( "Ranker bits per elements: " + (double)ranker.numBits() / size );
-		LOGGER.debug( "Leaves bits per elements: " + (double)leaves.numBits() / size );
-		LOGGER.debug( "Mistake bits per elements: " + (double)numBitsForMistakes() / size );
+		LOGGER.debug( "Behaviour bits per element: " + (double)behaviour.numBits() / size );
+		LOGGER.debug( "Signature bits per element: " + (double)signatures.numBits() / size );
+		LOGGER.debug( "Ranker bits per element: " + (double)ranker.numBits() / size );
+		LOGGER.debug( "Leaves bits per element: " + (double)leaves.numBits() / size );
+		LOGGER.debug( "Mistake bits per element: " + (double)numBitsForMistakes() / size );
 		
 	}
 	
@@ -556,17 +546,19 @@ public class RelativeTrieDistributor<T> extends AbstractObject2LongFunction<T> {
 		}
 		
 		int i = logW - 1;
-		long r = (int)v.length();
+		long r = v.length();
 		long j = -1;
 		long l = 0;
 		while( r - l > 1 ) {
 			assert i > -1;
 			if ( DDEBUG ) System.err.println( "[" + l + ".." + r + "]; i = " + i );
 			// ALERT: slow!
-			for( j = l + 1; j < r; j++ ) if ( j % ( 1 << i ) == 0 ) break;
+			for( j = l + 1; j < r; j++ ) if ( j % ( 1L << i ) == 0 ) break;
 			if ( j < r ) {
 
 				long data = signatures.getLong( v.subVector( 0, j ) );
+				
+				if ( DEBUG ) System.err.println( "Recalled " + v.subVector( 0, j ) + " (signature: " + ( data >>> logW ) + " length: " + ( data & logWMask ) + " data: " + data + ")" );
 				
 				if ( data == -1 ) {
 					if ( DEBUG ) System.err.println( "Missing " + v.subVector( 0, j )  );
@@ -582,7 +574,7 @@ public class RelativeTrieDistributor<T> extends AbstractObject2LongFunction<T> {
 					else {
 						long h = Hashes.jenkins( v.subVector( 0, g ) );
 
-						if ( DEBUG ) System.err.println( "Recalling " + v.subVector( 0, j ) + " with signature " + ( h & logLogWMask ) + " and length " + g );
+						if ( DEBUG ) System.err.println( "Testing signature " + ( h & logLogWMask ) );
 
 						if ( ( data >>> logW ) == ( h & logLogWMask ) && g >= j ) l = g;
 						else r = j;
