@@ -3,6 +3,7 @@ package test.it.unimi.dsi.sux4j.mph;
 import it.unimi.dsi.bits.TransformationStrategies;
 import it.unimi.dsi.fastutil.ints.IntArrays;
 import it.unimi.dsi.fastutil.io.BinIO;
+import it.unimi.dsi.fastutil.longs.LongArrayList;
 import it.unimi.dsi.sux4j.mph.MWHCFunction;
 
 import java.io.File;
@@ -43,5 +44,14 @@ public class MWHCFunctionTest extends TestCase {
 				check[ (int)mph.getLong( s[ i ] ) ] = i;
 			}
 		}
+	}
+	
+	public void testLongNumbers() {
+		LongArrayList l = new LongArrayList( new long[] { 0x234904309830498L, 0xae049345e9eeeeeL, 0x23445234959234L, 0x239234eaeaeaeL } );
+		MWHCFunction<CharSequence> mph = new MWHCFunction<CharSequence>( Arrays.asList( new String[] { "a", "b", "c", "d" } ), TransformationStrategies.utf16(), l, Long.SIZE );
+		assertEquals( l.getLong( 0 ), mph.getLong( "a" ) );
+		assertEquals( l.getLong( 1 ), mph.getLong( "b" ) );
+		assertEquals( l.getLong( 2 ), mph.getLong( "c" ) );
+		assertEquals( l.getLong( 3 ), mph.getLong( "d" ) );
 	}
 }
